<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="8dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="8dp"
    tools:context=".MainActivity"
    android:orientation="vertical">

<!--input-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/kamarhotel"
        android:gravity="center"
        android:textSize="20dp"
        android:textStyle="bold"
        android:text="@string/kamarhotel"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/idnama"
        android:inputType="text"
        android:hint="Nama Lengkap"
        android:lines="1"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/idhotel"
        android:inputType="text"
        android:hint="Nama Hotel"
        android:lines="1"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/idjumlah"
        android:inputType="text"
        android:hint="Jumlah"
        android:lines="1"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/iddurasi"
        android:inputType="text"
        android:hint="Durasi Penyewaan Kamar"
        android:lines="1"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/input"
        android:id="@+id/binput"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toutput"
        android:gravity="center"
        android:textSize="20dp"
        android:textStyle="bold"
        android:text="@string/output"/>


    <!--output-->
    <TextView
        android:layout_width="389dp"
        android:layout_height="wrap_content"
        android:text="@string/outputnama"
        android:textSize="18dp"
        android:textStyle="bold" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/IDoutputnama"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/outputhotel"
        android:textStyle="bold"
        android:layout_marginTop="18dp"
        android:textSize="18dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/IDoutputhotel"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/outputkamar"
        android:textStyle="bold"
        android:layout_marginTop="18dp"
        android:textSize="18dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/IDoutputkamar"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/outputdurasi"
        android:textStyle="bold"
        android:layout_marginTop="18dp"
        android:textSize="18dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/IDoutputdurasi"/>
</LinearLayout>